@@ -1,5 +1,7 @@
 Version 0.3.0
 
+   - Refactored synchronous dynamics to be completely independent of models
+   
 Version 0.2.0 2017-06-27
 
    - New approach for compartmented models and dynamics
